# acodex_server

./: Cargo.toml  hey  hey.rs  install.sh  readme.md  test.html
.github/workflows/: build.yml  ci.yml  main.yml  release.yml  rust.yml
src/: lsp.rs  main.rs  term_server.rs  updates.rs
src/terminal/: buffer.rs  handlers.rs  mod.rs  pty_fallback.rs  scrollback.rs  types.rs
src/utils/: mod.rs
