[package]
name = "axs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
futures = "0.3.31"
libc = "0.2.167"
nix = { version = "0.29.0", features = ["term"] }
pnet = "0.34.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
