[package]
name = "axs"
version = "0.2.0"
edition = "2021"


[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
futures = "0.3.31"
pnet = "0.34.0"
portable-pty = { git = "https://github.com/wez/wezterm", package = "portable-pty", rev = "1e941fca5c17155b5f64a74221a396ef12ef71d0" }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
semver = "1.0.25"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
